.provarCaches/00D5h000009Q6XQEA0/objects/provar__API_Path__c.object
<CustomObject>
    <fields>
        <fullName>provar__Content_Type__c</fullName>
        <label>Content Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>application/json</fullName>
                    <default>true</default>
                    <label>application/json</label>
                </value>
                <value>
                    <fullName>application/xml</fullName>
                </value>
                <value>
                    <fullName>application/x-www-form-urlencoded</fullName>
                </value>
                <value>
                    <fullName>text/csv</fullName>
                </value>
                <value>
                    <fullName>text/html</fullName>
                </value>
                <value>
                    <fullName>text/plain</fullName>
                </value>
                <value>
                    <fullName>text/xml</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>provar__HTTP_Method__c</fullName>
        <label>HTTP Method</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GET</fullName>
                    <default>true</default>
                    <label>GET</label>
                </value>
                <value>
                    <fullName>POST</fullName>
                </value>
                <value>
                    <fullName>PUT</fullName>
                </value>
                <value>
                    <fullName>PATCH</fullName>
                </value>
                <value>
                    <fullName>DELETE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>provar__Path__c</fullName>
        <label>Path</label>
        <length>6000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>provar__Summary__c</fullName>
        <label>Summary</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>provar__System__c</fullName>
        <label>System</label>
        <referenceTo>provar__System__c</referenceTo>
        <relationshipLabel>API Paths</relationshipLabel>
        <relationshipName>API_Paths</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>API Path</label>
    <listViews>
        <fullName>provar__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>API-{000000}</displayFormat>
        <label>API Path Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>API Paths</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>